# Performance-attribution-factor-analysis

./: .gitignore  README.md  pyproject.toml
configs/: benchmark.yml  portfolio.yml
notebooks/: demo.ipynb
src/attribution/: __init__.py  __main__.py  brinson.py  config.py  factor_model.py  logging_setup.py  pipeline.py  plotting.py  portfolio.py  report.py
src/attribution/data/: __init__.py  benchmark.py  factors.py  prices.py
tests/: conftest.py  test_brinson.py  test_factor_model.py  test_portfolio.py
